--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "emoji-picker-react": "^4.4.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,8 +18,10 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-video-thumbnail": "^0.1.3",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.22",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
