--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_ENDPOINT=http://localhost:8000/api/v1
-REACT_APP_SERVER_ENDPOINT=http://localhost:8000
+REACT_APP_API_ENDPOINT=http://whatsapp-backend.salonwallah.com/api/v1
+REACT_APP_SERVER_ENDPOINT=http://whatsapp-backend.salonwallah.com/
 REACT_APP_CLOUD_NAME=dsjwdmqhb
 REACT_APP_CLOUD_SECRET=os98qm48
